Adicionado exemplo dados exportados

--- a/scraper_fundamentus.ipynb
+++ b/scraper_fundamentus.ipynb
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,6 +547,160 @@
     "# exporta para arquivo formato csv\n",
     "sorted_df.to_csv('fundamentus.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exemplo das primeiras colunas a serem exportadas:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Papel</th>\n",
+       "      <th>Cotação</th>\n",
+       "      <th>Tipo</th>\n",
+       "      <th>Data últ cot</th>\n",
+       "      <th>Empresa</th>\n",
+       "      <th>Min 52 sem</th>\n",
+       "      <th>Setor</th>\n",
+       "      <th>Max 52 sem</th>\n",
+       "      <th>Subsetor</th>\n",
+       "      <th>Vol $ méd (2m)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AALR3</th>\n",
+       "      <td>AALR3</td>\n",
+       "      <td>10.64</td>\n",
+       "      <td>ON NM</td>\n",
+       "      <td>09/04/2020</td>\n",
+       "      <td>ALLIAR ON NM</td>\n",
+       "      <td>8.32</td>\n",
+       "      <td>Saúde</td>\n",
+       "      <td>23.15</td>\n",
+       "      <td>Serviços Médico - Hospitalares, Análises e Dia...</td>\n",
+       "      <td>7334810.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ABCB4</th>\n",
+       "      <td>ABCB4</td>\n",
+       "      <td>13.60</td>\n",
+       "      <td>PN N2</td>\n",
+       "      <td>09/04/2020</td>\n",
+       "      <td>ABC Brasil PN N2</td>\n",
+       "      <td>11.03</td>\n",
+       "      <td>Financeiros</td>\n",
+       "      <td>23.75</td>\n",
+       "      <td>Bancos</td>\n",
+       "      <td>14530200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ABEV3</th>\n",
+       "      <td>ABEV3</td>\n",
+       "      <td>12.10</td>\n",
+       "      <td>ON NM</td>\n",
+       "      <td>09/04/2020</td>\n",
+       "      <td>AMBEV S/A ON NM</td>\n",
+       "      <td>11.03</td>\n",
+       "      <td>Bebidas</td>\n",
+       "      <td>20.18</td>\n",
+       "      <td>Cervejas e Refrigerantes</td>\n",
+       "      <td>490808000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ADHM3</th>\n",
+       "      <td>ADHM3</td>\n",
+       "      <td>3.35</td>\n",
+       "      <td></td>\n",
+       "      <td>09/04/2020</td>\n",
+       "      <td>VITALYZE.ME</td>\n",
+       "      <td>1.07</td>\n",
+       "      <td>Prods. de Uso Pessoal e de Limpeza</td>\n",
+       "      <td>3.35</td>\n",
+       "      <td>Produtos de Uso Pessoal</td>\n",
+       "      <td>232898.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AFLT3</th>\n",
+       "      <td>AFLT3</td>\n",
+       "      <td>6.85</td>\n",
+       "      <td>ON</td>\n",
+       "      <td>09/04/2020</td>\n",
+       "      <td>AFLUENTE T ON</td>\n",
+       "      <td>4.38</td>\n",
+       "      <td>Energia Elétrica</td>\n",
+       "      <td>32.74</td>\n",
+       "      <td>Energia Elétrica</td>\n",
+       "      <td>23249.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Papel  Cotação   Tipo Data últ cot           Empresa  Min 52 sem  \\\n",
+       "AALR3  AALR3    10.64  ON NM   09/04/2020      ALLIAR ON NM        8.32   \n",
+       "ABCB4  ABCB4    13.60  PN N2   09/04/2020  ABC Brasil PN N2       11.03   \n",
+       "ABEV3  ABEV3    12.10  ON NM   09/04/2020   AMBEV S/A ON NM       11.03   \n",
+       "ADHM3  ADHM3     3.35          09/04/2020       VITALYZE.ME        1.07   \n",
+       "AFLT3  AFLT3     6.85     ON   09/04/2020     AFLUENTE T ON        4.38   \n",
+       "\n",
+       "                                    Setor  Max 52 sem  \\\n",
+       "AALR3                               Saúde       23.15   \n",
+       "ABCB4                         Financeiros       23.75   \n",
+       "ABEV3                             Bebidas       20.18   \n",
+       "ADHM3  Prods. de Uso Pessoal e de Limpeza        3.35   \n",
+       "AFLT3                    Energia Elétrica       32.74   \n",
+       "\n",
+       "                                                Subsetor  Vol $ méd (2m)  \n",
+       "AALR3  Serviços Médico - Hospitalares, Análises e Dia...       7334810.0  \n",
+       "ABCB4                                             Bancos      14530200.0  \n",
+       "ABEV3                           Cervejas e Refrigerantes     490808000.0  \n",
+       "ADHM3                            Produtos de Uso Pessoal        232898.0  \n",
+       "AFLT3                                   Energia Elétrica         23249.0  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_df[sorted_df.columns[:10]].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
