Adicionado arquivo exemplo exportado

--- a/scraper_fundamentus.ipynb
+++ b/scraper_fundamentus.ipynb
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
     "sorted_df = sorted_df.sort_index()\n",
     "\n",
     "# exporta para arquivo formato csv\n",
-    "sorted_df.to_csv('fundamentus.csv')"
+    "sorted_df.to_csv('scraper_fundamentus.csv')"
    ]
   },
   {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
        "AFLT3                                   Energia Elétrica         23249.0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,13 +694,6 @@
    "source": [
     "sorted_df[sorted_df.columns[:10]].head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
