Adicionando scraper de dados fundamentalistas do site suno analítica

--- a/scraper_fundamentus.ipynb
+++ b/scraper_fundamentus.ipynb
@@ -511,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Limpa dados `-` dos dados:"
+    "Limpa os `-` dos dados:"
    ]
   },
   {
