--- a/scraper_suno_analitica.ipynb
+++ b/scraper_suno_analitica.ipynb
@@ -9,7 +9,7 @@
     "Scraper para ler/coletar histórico de dados fundamentalistas (demonstração de resultados, balanço patrimonial e demonstrativo de fluxo de caixa).\n",
     "\n",
     "**Atenção:** Futuramento poderá ser implementada a leitura de dados dos indicadores históricos.  \n",
-    "Infelizmente, muitos destes indicadores são calculados considerando a quantidade de ações, algo que a plataforma está calculando erroneamente (o cálculo na data de hoje: 18 de abril de 2020, é feito considerando somente a quantidade de ações do ticker consultado, e não sobre todas as ações existentes da empresa *ON + PN*, acarretando assim na apresentação de informações não incorretas).\n"
+    "Infelizmente, muitos destes indicadores são calculados considerando a quantidade de ações, algo que a plataforma está calculando erroneamente (o cálculo na data de hoje: 18 de abril de 2020, é feito considerando somente a quantidade de ações do ticker consultado, e não sobre todas as ações existentes da empresa *ON + PN*, acarretando assim a apresentação incorretas de informações).\n"
    ]
   },
   {
@@ -18,8 +18,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# instala bibliotecas externas\n",
-    "\n",
     "# import\n",
     "import requests\n",
     "import pandas as pd\n",
@@ -97,9 +95,9 @@
    "metadata": {},
    "source": [
     "##### Colunas disponíveis (overview)\n",
-    "- colunas com nomes simples (C_4T2019, C_3T2019, C_2T2019): representam os valores financeiro sobre cada informação conforme coluna `descrição`\n",
-    "- colunas finalisadas com `AV` (C_4T2019_AV, C_3T2019_AV, C_2T2019_AV): representam seu peso sobre o valor do nível superior\n",
-    "- colunas finalizadas com `AH` (C_3T2019_AH, C_2T2019_AH, C_1T2019_AH): representam variação sobre o valor do anterior, sendo assim um comparativo"
+    "- colunas com nomes simples (C_4T2019, C_3T2019, C_2T2019): representam os valores financeiros sobre cada informação conforme coluna `descrição`\n",
+    "- colunas finalisadas com `AV` (C_4T2019_AV, C_3T2019_AV, C_2T2019_AV): representam valor percentual referente seu peso no balanço\n",
+    "- colunas finalizadas com `AH` (C_3T2019_AH, C_2T2019_AH, C_1T2019_AH): representam variação sobre o valor histórico anterior, sendo assim um comparativo"
    ]
   },
   {
@@ -340,7 +338,7 @@
    "source": [
     "cleaned_df = data_df\n",
     "\n",
-    "# criando indice pelos níveis e pela descrição (ignorando colunas dos valores)\n",
+    "# criando indices pelos níveis e pela descrição (ignorando colunas dos valores)\n",
     "cleaned_df = cleaned_df.set_index([col for col in data_df.columns if 'C_' not in col])\n",
     "\n",
     "# exemplo de dados\n",
@@ -390,7 +388,7 @@
     }
    ],
    "source": [
-    "# Gráfico dos níveis superiores\n",
+    "# Gráfico (níveis superiores)\n",
     "graf_df = cleaned_df.reset_index().set_index('description')\n",
     "\n",
     "# filtrando somente por subníveis mais alto\n",
@@ -569,7 +567,7 @@
     "# filtrando somente por colunas pelos percentuais balanço contra balanço\n",
     "graf_df = graf_df[[col for col in graf_df.columns if '_AV' in col]]\n",
     "\n",
-    "# pega ultimo balanço apresentado\n",
+    "# pega último balanço apresentado\n",
     "graf_df = graf_df[graf_df.columns[:1]] * 100\n",
     "graf_df.style.format('{:,.2f}%')"
    ]
