--- a/scraper_suno_analitica.ipynb
+++ b/scraper_suno_analitica.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Scraper Suno Analítica\n",
     "\n",
-    "Scraper para ler/coletar histórico de dados fundamentalistas (demonstração de resultados, balanço patrimonial e demonstrativo de fluxo de caixa).\n",
+    "Scraper para ler/coletar histórico de dados fundamentalistas (demonstração de resultados, balanço patrimonial e demonstrativo de fluxo de caixa) apresentados no site https://www.sunoresearch.com.br/acoes/, possibilitando uma análise fundamentalista automatizada.\n",
     "\n",
     "**Atenção:** Futuramento poderá ser implementada a leitura de dados dos indicadores históricos.  \n",
     "Infelizmente, muitos destes indicadores são calculados considerando a quantidade de ações, algo que a plataforma está calculando erroneamente (o cálculo na data de hoje: 18 de abril de 2020, é feito considerando somente a quantidade de ações do ticker consultado, e não sobre todas as ações existentes da empresa *ON + PN*, acarretando assim a apresentação incorretas de informações).\n"
