Status Invest Scraper

--- a/notebooks/fundamentus.ipynb
+++ b/notebooks/fundamentus.ipynb
@@ -105,9 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 237/237 [06:48<00:00,  1.72s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "stocks_full_data_dict = {}\n",
     "\n",
@@ -204,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,11 +228,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stocks_full_data_df.to_csv(\"../outputs/fundamentus.csv\", index=False)"
+    "stocks_full_data_df.to_csv(\"../outputs/fundamentus.csv\", sep=\";\", index=False)"
    ]
   }
  ],
