StatusInvest extra infos and historical indicators

--- a/notebooks/fundamentus.ipynb
+++ b/notebooks/fundamentus.ipynb
@@ -84,13 +84,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Filtered stock tickers in the list: 237 ---\n"
+      "--- Filtered stock tickers in the list: 215 ---\n"
      ]
     }
    ],
    "source": [
     "# by trading liquidity\n",
     "stocks_general_data_df = stocks_general_data_df[stocks_general_data_df[\"Liq.2meses\"] >= 1_000_000]\n",
+    "\n",
+    "# filter out only the most liquid stock from each company\n",
+    "stocks_general_data_df[\"PREFIX\"] = stocks_general_data_df[\"Papel\"].str.upper().str[:4]\n",
+    "stocks_general_data_df.sort_values(\"Liq.2meses\", ascending=False, inplace=True)\n",
+    "stocks_general_data_df.drop_duplicates(\"PREFIX\", keep=\"first\", inplace=True)\n",
+    "stocks_general_data_df.drop(\"PREFIX\", axis=1, inplace=True)\n",
     "\n",
     "# show stock tickers count after filter applied\n",
     "print(f\"--- Filtered stock tickers in the list: {stocks_general_data_df.shape[0]} ---\")"
@@ -112,7 +118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 237/237 [06:48<00:00,  1.72s/it]\n"
+      "100%|██████████| 215/215 [05:00<00:00,  1.40s/it]\n"
      ]
     }
    ],
@@ -141,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Filtered stocks data in the list: 235 ---\n"
+      "--- Filtered stocks data in the list: 214 ---\n"
      ]
     }
    ],
@@ -175,7 +181,7 @@
       "ITUB4 PN N1        ITAUUNIBANCO PN N1      Intermediários Financeiros                            Bancos    32.33\n",
       "BBDC4 PN N1 BANCO BRADESCO S.A. PN N1      Intermediários Financeiros                            Bancos    15.36\n",
       "BBAS3    ON   BANCO DO BRASIL S.A. ON      Intermediários Financeiros                            Bancos    56.58\n",
-      "--- Total stock data rows in the list: 235 ---\n"
+      "--- Total stock data rows in the list: 214 ---\n"
      ]
     }
    ],
