--- a/notebooks/statusinvest.ipynb
+++ b/notebooks/statusinvest.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,19 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TICKER  PRECO    DY   P/L  P/VP  P/ATIVOS  MARGEM BRUTA  MARGEM EBIT  MARG. LIQUIDA  P/EBIT  EV/EBIT  DIVIDA LIQUIDA / EBIT\n",
-      " VALE3  68.36  8.89  6.53  1.63      0.70         40.12        31.07          23.03    4.84     5.62                   0.78\n",
-      " PETR4  39.28 18.63  3.74  1.33      0.50         51.08        38.69          25.53    2.47     3.68                   1.15\n",
-      " ITUB4  32.33  3.89  9.96  1.73      0.13         30.03         9.92           8.30    8.33     7.73                    NaN\n",
-      " BBDC4  15.36  7.25 11.81  0.98      0.09         30.94         3.95           6.18   18.49    17.49                    NaN\n",
-      " BBAS3  56.58  8.09  4.87  0.98      0.07         32.66        15.94          12.40    3.79     3.79                    NaN\n",
+      "TICKER  PRECO    DY   P/L  P/VP  P/ATIVOS  MARGEM BRUTA  MARGEM EBIT  MARG. LIQUIDA  P/EBIT\n",
+      " VALE3  69.50  8.75  6.64  1.66      0.71         40.12        31.07          23.03    4.92\n",
+      " PETR4  39.96 18.31  3.81  1.35      0.51         51.08        38.69          25.53    2.51\n",
+      " ITUB4  32.81  3.83 10.10  1.75      0.13         30.03         9.92           8.30    8.46\n",
+      " BBDC4  15.52  7.17 11.93  0.99      0.09         30.94         3.95           6.18   18.68\n",
+      " BBAS3  56.97  8.03  4.90  0.99      0.07         32.66        15.94          12.40    3.81\n",
       "--- Total stock tickers in the list: 620 ---\n"
      ]
     }
@@ -59,8 +59,42 @@
     "\n",
     "# show most liquid stocks (it also shows only the first X columns)\n",
     "stocks_general_data_df.sort_values(\"LIQUIDEZ MEDIA DIARIA\", ascending=False, inplace=True)\n",
-    "print(stocks_general_data_df[stocks_general_data_df.columns[0:12]][0:5].to_string(index=False))\n",
+    "print(stocks_general_data_df[stocks_general_data_df.columns[0:10]][0:5].to_string(index=False))\n",
     "print(f\"--- Total stock tickers in the list: {stocks_general_data_df.shape[0]} ---\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filter out stocks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Filtered stock tickers in the list: 219 ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "# by trading liquidity\n",
+    "stocks_general_data_df = stocks_general_data_df[stocks_general_data_df[\"LIQUIDEZ MEDIA DIARIA\"] >= 1_000_000]\n",
+    "\n",
+    "# filter out only the most liquid stock from each company\n",
+    "stocks_general_data_df[\"PREFIX\"] = stocks_general_data_df[\"TICKER\"].str.upper().str[:4]\n",
+    "stocks_general_data_df.sort_values(\"LIQUIDEZ MEDIA DIARIA\", ascending=False, inplace=True)\n",
+    "stocks_general_data_df.drop_duplicates(\"PREFIX\", keep=\"first\", inplace=True)\n",
+    "stocks_general_data_df.drop(\"PREFIX\", axis=1, inplace=True)\n",
+    "\n",
+    "# show stock tickers count after filter applied\n",
+    "print(f\"--- Filtered stock tickers in the list: {stocks_general_data_df.shape[0]} ---\")"
    ]
   },
   {
